--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,12 @@
 {
+  "fmt": {
+    "useTabs": false,
+    "lineWidth": 80,
+    "indentWidth": 2,
+    "semiColons": false,
+    "singleQuote": true,
+    "proseWrap": "preserve"
+  },
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
